--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>Modernize Your Shares</h2>
+						<p>DTAC LLC is an SEC registered transfer agent providing an unparalleled investor experience.</p>
 					</header>
 					<div class="highlights">
 						<section>
@@ -63,9 +63,9 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
+									<h3>Preventative Compliance</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>DTAC uses TokenSoft technology alongside ERC-1404 to automate your compliance. Manual processing of shares and traditional reconciliation processes can lead to errors, DTAC uses the blockchaint o prevent unauthorized transactions.</p>
 							</div>
 						</section>
 						<section>
