remove lorem ipsum

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<!-- Header -->
 			<header id="header">
 				<a class="logo" href="index.html">DTAC</a>
-				<nav>
+				<!-- <nav>
 					<a href="#menu">Menu</a>
-				</nav>
+				</nav> -->
 			</header>
 
 		<!-- Nav -->
@@ -51,13 +51,13 @@
 					</header>
 					<div class="highlights">
 						<section>
-							<div class="content">
+							<!-- <div class="content">
 								<header>
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 									<h3>Feugiat consequat</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
+							</div> -->
 						</section>
 						<section>
 							<div class="content">
@@ -69,15 +69,15 @@
 							</div>
 						</section>
 						<section>
-							<div class="content">
+							<!-- <div class="content">
 								<header>
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
 									<h3>Ipsum consequat</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
+							</div> -->
 						</section>
-						<section>
+						<!-- <section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
@@ -103,21 +103,21 @@
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
-						</section>
+						</section> -->
 					</div>
 				</div>
 			</section>
 
 		<!-- CTA -->
-			<section id="cta" class="wrapper">
+			<!-- <section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Curabitur ullamcorper ultricies</h2>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Testimonials -->
-			<section class="wrapper">
+			<!-- <section class="wrapper">
 				<div class="inner">
 					<header class="special">
 						<h2>Faucibus consequat lorem</h2>
@@ -165,13 +165,13 @@
 						</section>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<div class="content">
-						<section>
+						<!-- <section>
 							<h3>Accumsan montes viverra</h3>
 							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 						</section>
@@ -193,9 +193,9 @@
 								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
 							</ul>
 						</section>
-					</div>
+					</div> -->
 					<div class="copyright">
-						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
+						&copy; DTAC LLC 2020.
 					</div>
 				</div>
 			</footer>
