--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
 									<h3>Preventative Compliance</h3>
 								</header>
-								<p>DTAC uses TokenSoft technology alongside ERC-1404 to automate your compliance. Manual processing of shares and traditional reconciliation processes can lead to errors, DTAC uses the blockchaint o prevent unauthorized transactions.</p>
+								<p>DTAC uses TokenSoft technology alongside ERC-1404 to automate your compliance. Manual processing of shares and traditional reconciliation processes can lead to errors. DTAC uses the blockchain to prevent unauthorized transactions.</p>
 							</div>
 						</section>
 						<section>
